rules/dangling-networkpolicy/test/success_matches_matchexpressions_exists/input/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: has-app-label-pod
  namespace: default
  labels:
    app: web
spec:
  containers:
  - name: app
    image: nginx:latest
